Add CRUD functions for comment.
