# src/main/resources/api/api.yaml
@@ -120,7 +120,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AddPostReq'
+              $ref: '#/components/schemas/NewPost'
       responses:
         201:
           description: Create successfully.
@@ -198,6 +198,114 @@ paths:
         - post
       description: Delete a post.
       operationId: deletePostById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        204:
+          description: Delete successfully.
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+  /api/v1/comments:
+
+    post:
+      tags:
+        - comment
+      description: Create new comment.
+      operationId: createComment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewComment'
+      responses:
+        201:
+          description: Create successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+    put:
+      tags:
+        - comment
+      description: Edit comment info.
+      operationId: updateComment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommentPreview'
+      responses:
+        200:
+          description: Update successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+  /api/v1/comment/{id}:
+
+    get:
+      tags:
+        - comment
+      description: Get a comment's details.
+      operationId: getCommentById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Fetch successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+    delete:
+      tags:
+        - comment
+      description: Delete a comment.
+      operationId: deleteCommentById
       parameters:
         - name: id
           in: path
@@ -319,40 +427,6 @@ components:
             type: string
             description: The id of the comment in the list.
 
-    NewContent:
-      type: object
-      required:
-        - authorId
-      properties:
-        createdAt:
-          type: string
-          description: The time the content was created.
-          format: date-time
-        authorId:
-          type: string
-          description: Info about the content's author wrapped in the request.
-        text:
-          type: string
-          description: The text in the content.
-
-    AddPostReq:
-      allOf:
-        - $ref: '#/components/schemas/NewContent'
-        - type: object
-          properties:
-            title:
-              type: string
-              description: The title of the post.
-
-    AddCommentReq:
-      allOf:
-        - $ref: '#/components/schemas/NewContent'
-        - type: object
-          properties:
-            targetId:
-              type: string
-              description: Info about the comment's target wrapped in the request.
-
     Content:
       type: object
       description: A content on the newsfeed (post or comment).
@@ -376,47 +450,37 @@ components:
           format: date-time
         author:
           $ref: '#/components/schemas/AuthorInfo'
+        edited:
+          type: boolean
         text:
           type: string
           description: The text in the content.
-        numVotes:
+        numUpVotes:
           type: integer
-          description: The number of votes made on the content.
+          description: The number of up votes made on the content.
+          format: int32
+        numDownVotes:
+          type: integer
+          description: The number of down votes made on the content.
+          format: int32
+        numComments:
+          type: integer
+          description: The number of comments made on the content.
           format: int32
         numReports:
           type: integer
           description: The number of reports made on the content.
           format: int32
+        votes:
+          type: array
+          description: List of votes made on a content.
+          items:
+            $ref: '#/components/schemas/Vote'
         comments:
           type: array
           description: List of comments made on a content.
           items:
-            type: string
-            description: The id of the comment in the list.
-
-    PostPreview:
-      type: object
-      description: The preview of a Postcrunch post.
-      required:
-        - updatedAt
-      properties:
-        id:
-          type: string
-          description: The post's id.
-        createdAt:
-          type: string
-          description: The time the post was created.
-          format: date-time
-        updatedAt:
-          type: string
-          description: The last time the post was updated.
-          format: date-time
-        title:
-          type: string
-          description: The title of the post.
-        text:
-          type: string
-          description: The text in the content.
+            $ref: '#/components/schemas/CommentPreview'
 
     Post:
       allOf:
@@ -458,10 +522,12 @@ components:
           type: string
           description: The time the voted was created.
           format: date-time
-        author:
-          $ref: '#/components/schemas/AuthorInfo'
+        authorId:
+          type: string
+          description: Info about the vote's author
         target:
-          $ref: '#/components/schemas/Content'
+          type: string
+          description: The id of the targeted content.
 
     Report:
       type: object
@@ -485,10 +551,127 @@ components:
           type: string
           description: The time the report was created.
           format: date-time
+        authorId:
+          type: string
+          description: Info about the report's author
+        target:
+          type: string
+          description: The id of the targeted content.
+
+    NewContent:
+      type: object
+      required:
+        - authorId
+      properties:
+        createdAt:
+          type: string
+          description: The time the content was created.
+          format: date-time
+        authorId:
+          type: string
+          description: Info about the content's author wrapped in the request.
+        text:
+          type: string
+          description: The text in the content.
+
+    NewPost:
+      allOf:
+        - $ref: '#/components/schemas/NewContent'
+        - type: object
+          properties:
+            title:
+              type: string
+              description: The title of the post.
+
+    NewComment:
+      allOf:
+        - $ref: '#/components/schemas/NewContent'
+        - type: object
+          required:
+            - authorId
+          properties:
+            targetId:
+              type: string
+              description: Info about the comment's target wrapped in the request.
+
+    PostPreview:
+      type: object
+      description: The preview of a Postcrunch content.
+      required:
+        - id
+        - updatedAt
+      properties:
+        id:
+          type: string
+          description: The post's id.
+        createdAt:
+          type: string
+          description: The time the content was created.
+          format: date-time
+        updatedAt:
+          type: string
+          description: The last time the content was updated.
+          format: date-time
         author:
           $ref: '#/components/schemas/AuthorInfo'
-        target:
-          $ref: '#/components/schemas/Content'
+        edited:
+          type: boolean
+        title:
+          type: string
+          description: The title of the post.
+        text:
+          type: string
+          description: The text in the content.
+        numUpVotes:
+          type: integer
+          description: The number of up votes made on the content.
+          format: int32
+        numDownVotes:
+          type: integer
+          description: The number of down votes made on the content.
+          format: int32
+        numComments:
+          type: integer
+          description: The number of comments made on the content.
+          format: int32
+
+    CommentPreview:
+      type: object
+      description: The preview of a Postcrunch content.
+      required:
+        - id
+        - updatedAt
+      properties:
+        id:
+          type: string
+          description: The comment's id.
+        createdAt:
+          type: string
+          description: The time the content was created.
+          format: date-time
+        updatedAt:
+          type: string
+          description: The last time the content was updated.
+          format: date-time
+        author:
+          $ref: '#/components/schemas/AuthorInfo'
+        edited:
+          type: boolean
+        text:
+          type: string
+          description: The text in the content.
+        numUpVotes:
+          type: integer
+          description: The number of up votes made on the content.
+          format: int32
+        numDownVotes:
+          type: integer
+          description: The number of down votes made on the content.
+          format: int32
+        numComments:
+          type: integer
+          description: The number of comments made on the content.
+          format: int32
 
     ErrorResponse:
       type: object
